# movie-revenue-prediction

./: .gitignore  README.md  README_short.md  pyproject.toml  requirements.txt
artifacts/: elasticnet_best_params.json  elasticnet_cyc_best_params.json  neuralnetwork_swa_best_params.json  neuralnetwork_swa_cyc_best_params.json  randomforest_best_params.json  randomforest_cyc_best_params.json  xgboost_best_params.json  xgboost_cyc_best_params.json
artifacts/ensemble_C/: ensemble_manifest.json  meta_info.json
artifacts/ensemble_C/preprocessing/: feature_cols_cyc.json  topk_lists.json  winsor_thresholds.json
docs/: architecture.md  business_context.md  conclusions.md
notebooks/: 01_exploration_modeling.ipynb  02_deployment_2025_demo.ipynb  03_shap_feature_analysis.ipynb
results/: README.md
results/final_results/: df_2025_predictions.csv
results/metrics/: metrics_summary.csv  rmse_by_year.csv
results/plots/feature_importance/: rf_feature_importance_all.csv  rf_feature_importance_top20.csv
results/predictions/: df_all_predictions.csv  oof_predictions.csv
src/: functions.py
src/movie_revenue_prediction/: __init__.py
src/movie_revenue_prediction/api/: __init__.py  tmdb_client.py
src/movie_revenue_prediction/deployment/: __init__.py  pipeline.py
src/movie_revenue_prediction/features/: __init__.py  build_features.py
src/movie_revenue_prediction/models/: __init__.py  ensemble_model.py  nn_model.py  simple_models.py
src/movie_revenue_prediction/utils/: __init__.py  functions.py  paths.py
