[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-revenue-prediction"
version = "0.1.0"
description = "End-to-end movie box-office revenue prediction using TMDB data, feature engineering, and a stacked ensemble model."
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Nicolae Onuta" }
]

license = { text = "MIT" }

keywords = [
  "machine-learning",
  "movies",
  "box-office",
  "tmdb",
  "forecasting",
  "data-science",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "tqdm>=4.65",
  "joblib>=1.3",
  "scikit-learn>=1.3",
  "xgboost>=1.7",
  "scikeras>=0.10",
  "tensorflow>=2.13",
  "pyarrow>=12.0",
  "jupyter>=1.0",
  "notebook>=7.0",
  "ipykernel>=6.25",
  "matplotlib-inline>=0.1",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/viktoriquekj/movie-revenue-prediction"
Repository = "https://github.com/viktoriquekj/movie-revenue-prediction"
Documentation = "https://github.com/viktoriquekj/movie-revenue-prediction/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
